--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Transform your customer interactions with our advanced AI agents for inbound and outbound calls. Boost efficiency, improve customer satisfaction, and grow your business." />
+    <meta name="keywords" content="AI agents, call center AI, AI virtual agents, inbound calls, outbound calls, customer service AI, sales AI" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>NexusAI - Intelligent AI Agents for Inbound & Outbound Calls</title>
   </head>
   <body>
     <div id="root"></div>
